syntax = "proto3";

package kotlinx.rpc.grpc.test;

import "all_primitives_grpc.proto";
import "reference_package_grpc.proto";

message OneOf {
  oneof primitives {
    string string_value = 1;
    int32 int32 = 2;
    bool bool = 3;
  }

  oneof references {
    Other other = 4;
    References inner_references = 5;
  }

  oneof mixed {
    int64 int64 = 6;
    kotlinx.rpc.grpc.test.AllPrimitives allPrimitives = 7;
  }

  oneof single {
    bytes bytes = 8;
  }
}
